# rattler

./: .gitignore  README.md  dbModels.py  main.py  pyproject.toml  ref.py  routes.py  run_app.py  utils.py
app/: __init__.py  config.py  models.py  utils.py
app/divisions/: routes.py
app/main/: routes.py
app/players/: routes.py
app/tournaments/: routes.py
app/tpls/: __init__.py  base_tpl.html  division_player_removal.html  division_profile_tpl.html  divisions_tpl.html  grouping_tpl.html  index_init_tpl.html  index_tpl.html  mass_score_entry_tpl.html  player_delete_tpl.html  player_profile_edit_tpl.html  player_profile_tpl.html  players_create_tpl.html  players_tpl.html  prelimPlayer_add_tpl.html  prelimPlayer_base_tpl.html  prelimPlayer_rattler_pairings_tpl.html  prelimPlayer_tpl.html  prelim_player_remove.html  score_entry_tpl.html  tournament_edit_tpl.html  tournament_leaderboard_tpl.html  tournaments_create_tpl.html  tournaments_tpl.html
tpls/: __init__.py  base_tpl.html  divisions_create_tpl.html  divisions_tpl.html  index_tpl.html  players_create_tpl.html  players_tpl.html  tournaments_tpl.html
